--- a/diary/templates/diary.html
+++ b/diary/templates/diary.html
@@ -2,365 +2,128 @@
 {% load static from staticfiles %}
 {% block head %}
 	<!-- Standard Meta -->
-	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-	<!-- Site Properities -->
-	<title></title>
-	<link href="//cdn.bootcss.com/semantic-ui/2.1.3/semantic.css" rel="stylesheet">
-	<script src="//cdn.bootcss.com/jquery/2.1.4/jquery.js"></script>
-	<script src="//cdn.bootcss.com/semantic-ui/2.1.3/semantic.js"></script>
-	<!--- Example Javascript -->
-	<script>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>我们的日记本--{{date|date:"Y-m-d"}}</title>
+	<link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
+	<link href="{% static "bootstrap/magicsuggest/magicsuggest-min.css" %}" rel="stylesheet">
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="{% static "bootstrap/js/jquery.min.js" %}"></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
+	<script src="{% static "bootstrap/magicsuggest/magicsuggest-min.js"%}"></script>
+	<script type="text/javascript">
 	$(document).ready(function() {
-	$('.mood .ui.dropdown')
-	.dropdown({
-	on: 'hover',
-	onChange:function(value, text, $selectedItem){
-		$('#scoreprocess').progress({
-			value:value,
-			text: {
-					active  : '心情飙升中',
-					success : '满满的好心情'
-					}
-			});
-		}
-	})
-	;
-	$('.overlay').visibility({
-	type: 'fixed',
-	offset: 80
-	});
-	// fix main menu to page on passing
-	$('.main.menu').visibility({
-	type: 'fixed'
-	});
-	{% for item in myDayMood %}
-					$('#mscoreview{{item.pk}}')
-							.progress('increment')
-							;
+		var data = new Array();		
+		var i = 0;
+		i=0
+	{% for ikey in keywords %}
+		data[i]="{{ikey.text}}";
+		i+=1;
 	{% endfor %}
-	{% for item in yourDayMood %}
-					$('#yscoreview{{item.pk}}')
-							.progress('increment')
-							;
-	{% endfor %}
-	$('.keywords .ui.dropdown')
-	.dropdown({
-	on: 'hover',
-	allowAdditions:true
-	})
-	;
-	$('.keywords .button')
-	.on('click', function() {
-	$('.keywords .ui.dropdown')
-	.dropdown('clear')
-	;
-	})
-	;
-	$('.item')
-	.popup({
-	inline: true
-	})
-	;
-	// $('.ui.form .submit.button').bind('click', function () {
-				// 	console.log('submit');
-				// 	submitForm();
-	//    });
-	// function submitForm(){
-				// 	var $form =$('.ui.form');
-				// 	var score=$form.form('get value','score'),
-							// 		keywords = $form.form('get value','keywords'),
-							// 		contenttext = $form.form('get value','contenttext');
-				// 	console.log(score);
-				// 	console.log(keywords);
-				// 	console.log(contenttext);
-				// 	$form.form('submit');
-	// };
-	$('.ui.form').form({
-		score:{
-			identifier:'score',
-			rules:[{
-				type:'empty',
-				prompt:'选择一下心情吧！'
-			}]
-		},
-		keywords:{
-			identifier:'keywords',
-			rules:[{
-				type:'empty',
-				prompt:'输入或选择一下今天的关键词吧，用英文的逗号分割哦。'
-			}]
-		},
-		contenttext:{
-			identifier:'contenttext',
-			rules:[{
-				type:'empty',
-				prompt:'想说啥来着？'
-			}]
-		}
+		$('#magicsuggest')
+		.magicSuggest({
+			allowFreeEntries: true,
+			data: data
 		});
 	});
 	</script>
-	<script>
-	$(document)
-	.ready(function() {
-	// fix menu when passed
-	$('.masthead')
-	.visibility({
-	once: false,
-	onBottomPassed: function() {
-	$('.fixed.menu').transition('fade in');
-	},
-	onBottomPassedReverse: function() {
-	$('.fixed.menu').transition('fade out');
-	}
-	})
-	;
-	// create sidebar and attach to menu open
-	$('.ui.sidebar')
-	.sidebar('attach events', '.toc.item')
-	;
-	})
-	;
+	<script type="text/javascript">
+	$(document).ready(function(){
+            var options=$("#mood").val();
+            console.log(options);
+            var options=$("#keywords").val();
+            console.log(options);
+        });
 	</script>
 	<style type="text/css">
 	body {
-	background-color: #FFFFFF;
+	padding-top: 40px;
+	padding-bottom: 40px;
 	}
-	.main.container {
-	margin-top: 2em;
-	}
-	.hidden.menu {
-	display: none;
-	}
-	.main.menu {
-	margin-top: 4em;
-	border-radius: 0;
-	border: none;
-	box-shadow: none;
-	transition:
-	box-shadow 0.5s ease,
-	padding 0.5s ease
-	;
-	}
-	.main.menu .item img.logo {
-	margin-right: 1.5em;
-	}
-	.overlay {
-	float: left;
-	margin: 0em 3em 1em 0em;
-	}
-	.overlay .menu {
-	position: relative;
-	left: 0;
-	transition: left 0.5s ease;
-	}
-	.main.menu.fixed {
-	background-color: #FFFFFF;
-	border: 1px solid #DDD;
-	box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
-	}
-	.overlay.fixed .menu {
-	left: 800px;
-	}
-	.text.container .left.floated.image {
-	margin: 2em 2em 2em -4em;
-	}
-	.text.container .right.floated.image {
-	margin: 2em -4em 2em 2em;
-	}
-	.ui.footer.segment {
-	margin: 5em 0em 0em;
-	padding: 5em 0em;
+	.maincontent {
+	max-width: 600px;
+	padding: 15px;
+	margin: 0 auto;
 	}
 	</style>
 {% endblock %}
 {% block content %}
 	<body>
-		<!-- Following Menu -->
-		<div class="ui large top fixed hidden menu">
-			<div class="ui container">
-					
-				<a class="active item" href="/diary/">首页</a>
-				<a class="item" href="/diary/{{date|date:"Y/m/"}}">月档案</a>
-				<a class="item" href="/diary/{{date|date:"Y/"}}">年档案</a>
-				<a class="item" href="/blog/">博客</a>
-				<div class="right menu">
-					<div class="item">
-						<a class="ui button" href="/logout/">退出</a>
-					</div>
+		<!-- Fixed navbar -->
+		<nav class="navbar navbar-default navbar-fixed-top">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+					<span class="sr-only">固定导航</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="/diary/" >PP's</a>
 				</div>
-			</div>
-		</div>
-		<!-- Sidebar Menu -->
-		<div class="ui vertical  sidebar menu">
-			<a class="active item" href="/diary/">首页</a>
-			<a class="item" href="/diary/{{date|date:"Y/m/"}}">月档案</a>
-			<a class="item" href="/diary/{{date|date:"Y/"}}">年档案</a>
-			<a class="item" href="/blog/">博客</a>
-			<a class="item" href="/logout/">退出</a>
-		</div>
-		<div class="ui  vertical masthead center aligned segment">
-			<div class="ui container">
-				<div class="ui large secondary  pointing menu">
-					<a class="toc item">
-						<i class="sidebar icon"></i>
-					</a>
-					<a class="active item" href="/diary/">首页</a>
-					<a class="item" href="/diary/{{date|date:"Y/m/"}}">月档案</a>
-					<a class="item" href="/diary/{{date|date:"Y/"}}">年档案</a>
-					<a class="item" href="/blog/">博客</a>
-					<div class="right item">
-						<a class="ui button" href="/diary/logout/">退出</a>
-					</div>
+				<div id="navbar" class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li class="active"><a href="/diary/">首页</a></li>
+						<li><a href="/diary/{{date|date:"Y/m/"}}">月记</a></li>
+						<li><a href="/diary/{{date|date:"Y/"}}">年记</a></li>
+						<li><a href="/blog/">博客</a></li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="/logout/">退出</a></li>
+					</ul>
+					</div><!--/.nav-collapse -->
 				</div>
-			</div>
-		</div>
-		<form class="ui form" method = 'post'>
-			{% csrf_token %}
-			<div class ="ui gird container " >
-				
-				<div class="ui message">
-					<div class="ui two column grid">
-						<div class="left floated column">
-							<h1 class="ui header">{{user.username}},欢迎回来哦！</h1>
-							<p>今天是{{date|date:"Y年m月d日"}}。开心，快乐，郁闷，忧伤，不管怎样，都写下来吧！</p>
-						</div>
-						<div class="right floated  column">
-							<a href="/diary/{{date|date:"Y/m/"}}">
-								<div class="ui green tag label">我的本月心情指数:<div class="detail">{{myMonthScore|floatformat:"1"}}</div></div>
-								<div class="ui teal tag label">TA的本月心情指数:<div class="detail">{{yourMonthScore|floatformat:"1"}}</div></div>
-							</a>
+			</nav>
+			<div class="container">
+				<div class="jumbotron">
+					<div class="row">
+						<h2>{{user.username}},欢迎回来哦！</h2>
+						<p>今天是{{date|date:"Y年m月d日"}}。开心，快乐，郁闷，忧伤，不管怎样，都写下来吧！</p>
+						<div class="text-right">
+							<p class="label label-success">我的本月指数:
+							{{myMonthScore|floatformat:"1"}}</p>
+							<p class="label label-warning">TA的本月指数:{{yourMonthScore|floatformat:"1"}}</p>
 						</div>
 					</div>
 				</div>
-				<img class="ui fluid image" src="{% static "pic.png" %}">
-				<div class="ui divider"></div>
-				<div class="row">
-					<div class="column">
-						<h2 class="ui header first">选择一下心情吧</h2>
-					</div>
+				<div class="maincontent">
+					<img src="{% static "pic.png" %}" class="img-responsive" alt="Logo">
 				</div>
-				
-				<div class="mood">
-					<div class="ui two column grid">
-						<div class="three wide column">
-							<div class="ui selection dropdown">
-								<input type="hidden" name="score">
-								<div class="default text">选择一下心情吧</div>
-								<i class="dropdown icon"></i>
-								<div class="menu">
-									<div class="item" data-value="1">很伤心</div>
-									<div class="item" data-value="2">不开心</div>
-									<div class="item" data-value="3">还可以</div>
-									<div class="item" data-value="4">开心吧</div>
-									<div class="item" data-value="5">好开心</div>
-								</div>
-							</div>
+				<hr>
+				<form class="form" method = "post">
+					{% csrf_token %}
+					<h2>选择一下心情吧</h2>
+					<div class="row">
+						
+						<div class="col-xs-3 col-lg-2">
+							<select class="form-control" id="mood" name="score">
+								<option>很伤心</option>
+								<option>不开心</option>
+								<option>还可以</option>
+								<option>开心吧</option>
+								<option>好开心</option>
+							</select>
 						</div>
-						<div class="thirteen wide left aligned column">
-							<div class="ui indicating large progress" data-total="5" id="scoreprocess" >
-								<div class="bar" ><div class="process"></div></div>
-								<div class="label"></div>
+						<div class="col-xs-12 col-sm-6 col-lg-8">
+							<div class="progress" name="keywords">
+								<div class="progress-bar progress-bar-striped active" id="score" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%"><span class="sr-only">40% Complete (success)</span>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="ui divider"></div>
-				
-				<h2 class="ui header second">今天的关键词</h2>
-				<div class="keywords ">
-					<div class="ui two column grid">
-						<div class="fourteen wide column">
-							<div class="ui fluid multiple search selection dropdown">
-								<input name="keywords" type="hidden">
-								<i class="dropdown icon"></i>
-								<div class="default text">心情关键词</div>
-								<div class="menu">
-									{% for ikey in keywords %}
-										<div class="item" data-value="{{ikey.text}}">{{ikey.text}}</div>
-									{% endfor %}
-								</div>
-							</div>
-						</div>
-						<div class="two wide column">
-							<div class="ui green basic button">重新填写</div>
-						</div>
-					</div>
+				<hr>
+				<h2>选择一下心情吧</h2>
+				<div name="keywords" >
+					<input id="magicsuggest">
 				</div>
-				
-				<div class="ui divider"></div>
-				<h2 class="ui header">今天的故事</h2>
-				<div class="ui divider"></div>
-				<textarea name ="contenttext"></textarea>
-				<div class="ui error message"></div>
-				<div class="ui centered grid">
-					<div class="centered row">
-						<div class="ui floated big blue submit button">写好了</div>
-					</div>
-				</div>
-			</div>
-		</form>
-		
-		<div class ="ui gird container " >
-			<div class="ui horizontal divider"><i class="red heartbeat icon"></i></div>
-			<h2 class="ui header">今天说过的话</h2>
-			<div class="ui divider"></div>
-			<div class="ui two column grid">
-				<div class="left floated column">
-					<div class="ui middle aligned animated celled  list">
-						<h3 class="ui header">我的</h3>
-						{% for item in myDayMood %}
-							<div class="item" data-content="{{item.content}}"  >
-								<div class="ui indicating progress active" data-value="{{item.score}}" data-total="5" id="mscoreview{{item.pk}}">
-									<div class="bar" ></div>
-									<div class="label">{{item.get_keywords_text}}</div>
-								</div>
-								
-							</div>
-						{% endfor %}
-					</div>
-				</div>
-				<div class="left floated column">
-					<div class="ui middle aligned animated celled  list">
-						<h3 class="ui header">TA的</h3>
-						{% for item in yourDayMood %}
-							<div data-content="{{item.content}}" class="item">
-								<div class="ui indicating progress active" data-value="{{item.score}}" data-total="5" id="yscoreview{{item.pk}}">
-									<div class="bar" ></div>
-									<div class="label">{{item.get_keywords_text}}</div>
-								</div>
-							</div>
-						{% endfor %}
-					</div>
-				</div>
-			</div>
-			<div class="ui divider"></div>
-			<div class="ui centered grid">
-				<div class="ui labeled icon horizontal menu">
-					<a class="item" href="/diary/{{lastday|date:"Y/m/d/"}}"><i class="chevron left icon"></i> 前一天</a>
-					<a class="item" href="/diary/"><i class="chevron up icon"></i> 今天</a>
-					<a class="item" href="/diary/{{nextday|date:"Y/m/d/"}}"><i class="chevron right icon"></i> 后一天</a>
-				</div>
-			</div>
-		</div>
-		<div class="ui  vertical footer segment">
-			<div class="ui container">
-				<div class="ui stackable  divided equal height stackable grid">
-					<div class="three wide column">
-						<h4 class="ui  header">关于</h4>
-						<div class="ui  link list">
-							<a href="#" class="item">我们的哦</a>
-							<p></p>
-						</div>
-					</div>
-					<div class="three wide column">
-					</div>
-				</div>
-				<div class="seven wide column">
-				</div>
-			</div>
-		</div>
-	</body>
-{% endblock %}
+				<hr>
+				<h2>今天的故事</h2>
+				<textarea class="form-control" rows="8" name="contenttext"></textarea>
+				<button class="btn btn-success btn-lg btn-block" type="submit">写好了</button>
+			</form>
+			<hr>
+			
+		</body>
+	{% endblock %}
