--- a/diary/templates/login_page.html
+++ b/diary/templates/login_page.html
@@ -2,90 +2,42 @@
 {% load static from staticfiles %}
 {% block head %}
   <!-- Standard Meta -->
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <!-- Site Properities -->
-  <title>登陆</title>
-  <link href="//cdn.bootcss.com/semantic-ui/2.1.3/semantic.css" rel="stylesheet">
-  <script src="//cdn.bootcss.com/jquery/2.1.4/jquery.js"></script>
-  <script src="//cdn.bootcss.com/semantic-ui/2.1.3/semantic.js"></script>
-  <!--- Example Javascript -->
-  <script>
-    $(document).ready(function() {
-      $('.ui.form')
-      .form({
-        fields: {
-        username: {
-          identifier  : 'username',
-          rules: [{
-              type   : 'empty',
-              prompt : 'Please enter your e-mail'
-              }]
-            },
-          password: {
-            identifier  : 'password',
-            rules: [{
-              type   : 'empty',
-              prompt : 'Please enter your password'
-              },
-              {
-              type   : 'length[6]',
-              prompt : 'Your password must be at least 6 characters'
-              }]
-            }
-        }
-      });
-    });
-  </script>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>我们的日记本--登陆</title>
+  <link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
   <style type="text/css">
   body {
-  background-color: #DADADA;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #eee;
   }
-  body > .grid {
-  height: 100%;
-  }
-  .image {
-  margin-top: -100px;
-  }
-  .column {
-  max-width: 450px;
+  .form-signin {
+  max-width: 600px;
+  padding: 15px;
+  margin: 0 auto;
   }
   </style>
 {% endblock %}
 {% block content %}
   <body>
-    <div class="ui middle aligned center aligned grid">
-      <div class="column">
-      
-        <h2 class="ui teal image header">
-        <img class="ui fluid image" src="{% static "pic.png" %}">
-        <div class="content">
-          登陆一下吧
-        </div>
-        </h2>
-        <form class="ui large form" method = 'post'>
+    <div class = "container">
+      <div class="form-signin">
+        <img src="{% static "pic.png" %}" class="img-responsive" alt="Logo">
+        <form class="form-inline" method = "post">
           {% csrf_token %}
-          <div class="ui stacked segment">
-            <div class="field">
-              <div class="ui left icon input">
-                <i class="user icon"></i>
-                <input type="text" name="username" placeholder="用户名">
-              </div>
-            </div>
-            <div class="field">
-              <div class="ui left icon input">
-                <i class="lock icon"></i>
-                <input type="password" name="password" placeholder="密码">
-              </div>
-            </div>
-            <div class="ui fluid large teal submit button">登陆</div>
-          </div>
-          
-          <div class="ui error message"></div>
-          
+          <label type="username" class="sr-only"></label>
+          <input type="username" id="username" name="username" class="form-control" placeholder="用户名" required autofocus>
+          <label type="password" class="sr-only"></label>
+          <input type="password" id="password" name="password" class="form-control" placeholder="密码" required>
+          <button class="btn btn-default " type="submit">登陆</button>
         </form>
       </div>
     </div>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="{% static "bootstrap/js/jquery.min.js" %}"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
   </body>
 {% endblock %}
